# hevc_hdr_editor

./: Cargo.toml  README.md  build.rs
.github/actions/setup-release-env/: action.yml
.github/workflows/: release.yml
assets/: example_config.json  multimsg-sei-example-cfg.hevc  multimsg-sei-split.hevc  regular.mkv  regular_example_cfg.hevc
src/: cll_metadata.rs  edit_config.rs  main.rs  mdcv_metadata.rs  processor.rs  utils.rs
tests/: base.rs
