[package]
name = "hevc_hdr_editor"
version = "1.0.1"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/quietvoid/hevc_hdr_editor"
build = "build.rs"

[[bin]]
name = "hevc_hdr_editor"
path = "src/main.rs"

[dependencies]
bitvec_helpers = "4.0.1"
hevc_parser = { version = "0.6.10", features = ["hevc_io"] }

anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "wrap_help", "deprecated"] }
indicatif = "0.18.3"
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"

[build-dependencies]
anyhow = "1.0.101"
vergen-gitcl = { version = "9.1.0", default-features = false, features = ["build"] }

[profile.release-deploy]
inherits = "release"
lto = "thin"
strip = "symbols"
